DGC-000: Update the correct spacing inside the header to stop the flicking effect. (#138)

--- a/web/themes/custom/govcon/components/organisms/header/header.scss
+++ b/web/themes/custom/govcon/components/organisms/header/header.scss
@@ -16,7 +16,7 @@ header {
     top: 0;
 
     +main {
-      margin-top: 13rem;
+      margin-top: 132px;
     }
   }
 }
